# GalaxyToy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GalaxyToy  Makefile  README.md  cmake_install.cmake  main.cpp  stars
include/: Generate.hpp  Star.hpp  UI.hpp  Velocity.hpp  Window.hpp
src/: CMakeLists.txt  Generate.cpp  Makefile  Star.cpp  UI.cpp  Velocity.cpp  Window.cpp  cmake_install.cmake
